--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>My Favorite TV Show</title>
+  <link rel="stylesheet" href="css/style.css"> <!-- a / before css means the file is in the root -->
 </head>
 
 <body>
   <table cellspacing = 20>
     <tr>
-      <td><img style="height: 500px;" src="scandal.jpg" alt="Kerry Washingtion - Scandal"></td>
+      <td><img src="scandal.jpg" alt="Kerry Washingtion - Scandal"></td>
       <td><h1>Scandal</h1>
       <p><em>It's Handled!</em></p>
       <p>Shonda Rhomes is the creative mind behind this ABC drama. Olivia, Pope, a former media consultant
