--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 <br>
 <hr>
-<a href="hobbies.html">Top Quotes</a>
+<a href="topquotes.html">Top Quotes</a>
 <br>
 <a href="contact.html">Contact Me</a>
 
